feat(dev): move shared preview data to PostgreSQL
