# backend/app/api/main.py
@@ -4,6 +4,7 @@ from app.api.routes import (
     auth,
     candidates,
     dashboard,
+    developer,
     login,
     private,
     users,
@@ -20,6 +21,7 @@ api_router.include_router(utils.router)
 api_router.include_router(vacancies.router)
 api_router.include_router(candidates.router)
 api_router.include_router(dashboard.router)
+api_router.include_router(developer.router)
 
 
 if settings.ENVIRONMENT == "local":
